added copyright to README

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-
+######################################################################
+Project Browser
+Copyright (C) 2011 Mark Reid <mindmark@gmail.com>
+######################################################################
 
 About
 -------------------
